# projeto2

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: models.py
app/migrations/: env.py
app/migrations/versions/: c21665600061_add_categories_table.py
app/routes/: category_routes.py  deps.py
app/schemas/: base.py  category.py
app/shemas/: base.py  category.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py
app/test/schemas/: test_category_schema.py
app/test/use_cases/: category.py  test_category_use_cases.py
app/tests/schemas/: category.py
app/user_cases/: category.py
