[tool.poetry]
name = "projeto2"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
SQLAlchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
alembic = "^1.11.1"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
